# innit-flit

./: README.md  cookiecutter.json  pyproject.toml  setup.py  {{cookiecutter.name}}.ipynb  {{name}}.py
{{cookiecutter.name}}/: __init__.py
