#https://flit.readthedocs.io/en/latest/pyproject_toml.html
[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "{{name}}"
author = "{{author}}"
author-email = "{{email}}"
requires = [
  {% for package in packages.split() %}"{{package}}", {% endfor %}
]
keywords = []
home-page = "{{url}}"
license = "{{license}}"
description-file = "readme.md"


[tool.flit.metadata.requires-extra]
[tool.flit.metadata.urls]    
[tool.flit.scripts]
[tool.flit.sdist]

[tool.coverage.run]
[tool.coverage.report]
[tool.coverage.html]
