#https://flit.readthedocs.io/en/latest/pyproject_toml.html
[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "{{cookiecutter.name}}"
author = "{{cookiecutter.author}}"
author-email = "{{cookiecutter.email}}"
requires = [
  {% for package in cookiecutter.packages.split() %}"{{package}}", {% endfor %}
]
keywords = []
home-page = "{{cookiecutter.url}}"
license = "{{cookiecutter.license}}"
description-file = "readme.md"


[tool.flit.metadata.requires-extra]
[tool.flit.metadata.urls]    
[tool.flit.scripts]
[tool.flit.sdist]

[tool.coverage.run]
[tool.coverage.report]
[tool.coverage.html]














        